23935 - Fix Feedback/ btn-info buttons color contrast issue when keyboard tab into it

--- a/packages/dina-ui/components/button-bar/nav/wet-beow-bootstrap-4.css
+++ b/packages/dina-ui/components/button-bar/nav/wet-beow-bootstrap-4.css
@@ -381,7 +381,15 @@ a.btn,
   background-color: #117c8d;
   border-color: #117c8d;
 }
+
 .btn-info:hover {
+  color: white;
+  background-color: #18666d;
+  border-color: #18666d;
+}
+
+/* fix feedback button keyboard in color contrast issue */
+.btn-info:focus {
   color: white;
   background-color: #18666d;
   border-color: #18666d;
